styles.css
body {
  font-family: consolas, menlo, monaco, monospace;
  margin: 0;
  padding: 3rem;
  background-color: #FEFCF9;
}

div.passphrase {
  text-align: center;
}

div#content {
  display: none;
}

button {
  border: 1px solid #010306;
  border-radius: 0.25rem;
  background-color: #FEFCF9;
  font-family: consolas, menlo, monaco, monospace;
  color: black;
  font-size: 1.7rem;
  line-height: 1.2;
  white-space: nowrap;
  text-decoration: none;
  padding: 0.25rem 0.5rem;
  cursor: pointer;
}

div#results {
  margin-top: 1.7rem;
}

button:hover {
  background-color: #010306;
  color: #FEFCF9;
}

button:focus {
  outline: 0;
}

p {
  font-size: 0.7rem;
  margin-top: 5rem;
}

